uae4all (1rc2-6) fremantle; urgency=low

  * Added check for required KICK.ROM size

 -- Tomasz Sterna <tomek@xiaoka.com>  Tue, 20 Apr 2010 22:26:00 +0200

uae4all (1rc2-5) fremantle; urgency=low

  * Fixed sound option selection.
  * Added 'silent' sound emulation.
  * KICK.ROM missing error message more informative.
  * Proper version information in menu.

 -- Tomasz Sterna <tomek@xiaoka.com>  Tue, 20 Apr 2010 14:12:35 +0200

uae4all (1rc2-4) fremantle; urgency=low

  * Do not show hidden files and directories in file selector.
  * Fixed ESC key mapping.
  * Fixed joystick emulation.

 -- Tomasz Sterna <tomek@xiaoka.com>  Tue, 20 Apr 2010 10:46:18 +0200

uae4all (1rc2-3) fremantle; urgency=low

  * Fixed ESC key mapping.
  * Implemented stereo sound.
  * Merged uae4all-wiz 0.8.0 changes.
  * Using Cyclone for m68k processor emulation.
  * 4 FDDs support.
  * Added PAL/NTSC selector to menu.
  * Additional ARM optimisations.
  * Added SysInfo and JoyTest disk images to distribution.

 -- Tomasz Sterna <tomek@xiaoka.com>  Mon, 19 Apr 2010 15:53:07 +0200

uae4all (1rc2-2) fremantle; urgency=low

  * Updated graphics with RC2 resources.
  * Fixed joystick emulation on Maemo.
  * Extended keyboard emulation on Maemo.

 -- Tomasz Sterna <tomek@xiaoka.com>  Sun, 18 Apr 2010 23:12:19 +0200

uae4all (1rc2-1) fremantle; urgency=low

  * Merged uae4all RC2 (20100402) source from Chui:
    * savestates support
    * better sound emulation performance
    * keyboard joystick emulation
    * 7zip compressed disks support
  * Disabled SDL_DOUBLEBUFFER (it's not needed with scaler enabled)

 -- Tomasz Sterna <tomek@xiaoka.com>  Fri, 16 Apr 2010 12:18:29 +0200

uae4all (1rc1-2) fremantle; urgency=low

  * Fixed mouse position mapping.
  * Added joystick1 keyboard emulation.

 -- Tomasz Sterna <tomek@xiaoka.com>  Fri, 16 Apr 2010 01:39:14 +0200

uae4all (1rc1-1) fremantle; urgency=low

  * Initial packaging.
  * N900 Makefile.
  * Using /home/user/MyDocs as KICK.ROM location.