@@ -65,18 +65,20 @@ Y      : X, SPACE
 R      : 1, TAB
 L      : 2, BACKSPACE
 
-Joystick1 keymapping:
-Directions : Arrow Keys
-Fire1      : Ctrl
-Fire2      : Fn
-
-Mouse keymapping:
-Button1    : SPACE
-Button2    : SHIFT
 
 Keyboard mapping:
 1-0    : Fn + Q-P
 F1-F10 : Fn + Ctrl + Q-P
 Escape : Fn + Ctrl + BACKSPACE
 Keypad : Fn + Shift + Q-P ASFV.ENTER
+
+
+Mouse/Joystick emulation toggle:
+Fn + SPACE
+
+Mouse1 / Joystick2 keymapping:
+Toggle     : Fn + SPACE   (off/joy/mouse)
+Directions : Arrow Keys
+Button 1   : SHIFT
+Button 2   : SPACE
 
