@@ -1,1 +1,3 @@
 extern int decode_maemo (SDL_keysym *prKeySym);
+extern void decode_maemo_toggles (SDL_keysym *prKeySym);
+
