@@ -1,8 +1,10 @@
 uae4all (1rc2-6) fremantle; urgency=low
 
   * Added check for required KICK.ROM size
+  * Implemented Joystick/Mouse emulation toggle
+  * Changed mapping of fire/mouse buttons
 
- -- Tomasz Sterna <tomek@xiaoka.com>  Tue, 20 Apr 2010 22:26:00 +0200
+ -- Tomasz Sterna <tomek@xiaoka.com>  Wed, 21 Apr 2010 13:24:19 +0200
 
 uae4all (1rc2-5) fremantle; urgency=low
 
